# Dmx-Money

./: .browserslistrc  README.md  index.html  package.json  switch-tailwind.sh  vite.config.ts
.github/workflows/: deploy-web.yml  release.yml
config-presets/legacy/: index.css  postcss.config.js  tailwind.config.js  vite.config.ts
config-presets/modern/: index.css  postcss.config.js  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx  polyfills.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
src/components/ui/: AlertModal.tsx  Button.tsx  Calendar.tsx  Card.tsx  ColorPicker.tsx  ConfirmModal.tsx  FormPopup.tsx  Input.tsx  Modal.tsx  MultiSelect.tsx  ReleaseNotesModal.tsx  SearchableSelect.tsx  Skeleton.tsx  Table.tsx  TitleBar.tsx  Toast.tsx
src/constants/: changelog.ts  icons.ts
src/context/: BankContext.tsx  NavigationContext.tsx  SettingsContext.tsx  ToastContext.tsx
src/features/accounts/: AccountCard.tsx  SortableAccountItem.tsx  SortableGroupItem.tsx
src/hooks/: useFinancialMetrics.ts  useUpdater.ts
src/layouts/: Layout.tsx
src/pages/: Accounts.tsx  Analytics.tsx  Budget.tsx  Categories.tsx  Dashboard.tsx  Predictions.tsx  Scheduled.tsx  Settings.tsx  Transactions.tsx
src/services/: db.ts
src/styles/: App.css  base.css  index.css
src/types/: index.ts
src/utils/: colors.ts  format.ts  storage.ts
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+16 files in other folders)
