[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "~2.1", features = ["devtools"] }
tauri-plugin-log = "~2.0"
tauri-plugin-fs = "~2.0"
tauri-plugin-os = "~2.0"
tauri-plugin-dialog = "~2.0"
tauri-plugin-updater = "~2.0"
tauri-plugin-process = "~2.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
